completed the adaptive first block of the 17th lecture

--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -10,48 +10,94 @@
     <body>
         <div class="wraper">
             <header class="header">
-                <div class="header__container">
-                    <div class="header__logo">
-                        <a href="index.html">
-                            <img src="img/logo.svg" alt="Logo" />
-                        </a>
-                    </div>
-                    <div class="header__search search">
-                        <div class="search__image">
-                            <img src="img/icons/search.svg" alt="Search" />
-                        </div>
-                        <input
-                            type="text"
-                            class="search__input"
-                            placeholder="Search" />
-                    </div>
-                    <div class="header__languages languages">
-                        English (united States)
-                        <ul class="languages__options">
-                            <li>English</li>
-                            <li>Français</li>
-                            <li>Español</li>
-                        </ul>
-                    </div>
-                    <div class="header__btn btn">
-                        <a
-                            href="#"
-                            class="btn__login button button--border active"
-                            id="purpleButton">
-                            Login
-                        </a>
-                        <a
-                            href="#"
-                            class="btn__up button button--border"
-                            id="borderButton">
-                            Sign Up
-                        </a>
-                    </div>
-                </div>
+                <div class="header__container"></div>
             </header>
             <main class="main">
-                <div class="main__container">
-                    <div class="page"></div>
+                <div class="page">
+                    <div class="page__wrapper">
+                        <div class="page__container">
+                            <div class="page__our our">
+                                <div class="our__titles title">
+                                    <h1 class="our__title">Our Products</h1>
+                                    <div class="our__subtitle">
+                                        Add our products to weekly lineup
+                                    </div>
+                                    <ul class="our__list list-our">
+                                        <li class="list-our__item">Gold</li>
+                                        <li class="list-our__item">
+                                            Diamond
+                                        </li>
+                                        <li class="list-our__item">
+                                            Bronze
+                                        </li>
+                                        <li class="list-our__item">
+                                            Silver
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="our__items">
+                                    <div class="our__items">
+                                        <div class="our__column">
+                                            <div class="our__item item">
+                                                <img
+                                                    class="item__image"
+                                                    src="img/main/items/our/item-1.webp"
+                                                    alt="Image" />
+                                                <div class="item__name">
+                                                    Embossed hoop earrings
+                                                </div>
+                                                <div class="item__price">
+                                                    $144.00
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="our__column">
+                                            <div class="our__item item">
+                                                <img
+                                                    class="item__image"
+                                                    src="img/main/items/our/item-2.webp"
+                                                    alt="Image" />
+                                                <div class="item__name">
+                                                    Embossed hoop earrings
+                                                </div>
+                                                <div class="item__price">
+                                                    $144.00
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="our__column">
+                                            <div class="our__item item">
+                                                <img
+                                                    class="item__image"
+                                                    src="img/main/items/our/item-3.webp"
+                                                    alt="Image" />
+                                                <div class="item__name">
+                                                    Embossed hoop earrings
+                                                </div>
+                                                <div class="item__price">
+                                                    $144.00
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="our__column">
+                                            <div class="our__item item">
+                                                <img
+                                                    class="item__image"
+                                                    src="img/main/items/our/item-4.webp"
+                                                    alt="Image" />
+                                                <div class="item__name">
+                                                    Embossed hoop earrings
+                                                </div>
+                                                <div class="item__price">
+                                                    $144.00
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </main>
             <footer class="footer"></footer>
