finish first block HW

--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -24,25 +24,20 @@
                                     </div>
                                     <ul class="our__list list-our">
                                         <li class="list-our__item">Gold</li>
-                                        <li class="list-our__item">
-                                            Diamond
-                                        </li>
-                                        <li class="list-our__item">
-                                            Bronze
-                                        </li>
-                                        <li class="list-our__item">
-                                            Silver
-                                        </li>
+                                        <li class="list-our__item">Diamond</li>
+                                        <li class="list-our__item">Bronze</li>
+                                        <li class="list-our__item">Silver</li>
                                     </ul>
                                 </div>
-                                <div class="our__items">
-                                    <div class="our__items">
-                                        <div class="our__column">
-                                            <div class="our__item item">
-                                                <img
-                                                    class="item__image"
+                                <ul class="our__items">
+                                    <li class="our__column">
+                                        <div class="our__item item">
+                                            <div class="item__image">
+                                                <img class="item__img"
                                                     src="img/main/items/our/item-1.webp"
                                                     alt="Image" />
+                                            </div>
+                                            <div class="item__info">
                                                 <div class="item__name">
                                                     Embossed hoop earrings
                                                 </div>
@@ -51,12 +46,15 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="our__column">
-                                            <div class="our__item item">
+                                    </li>
+                                    <li class="our__column">
+                                        <div class="our__item item">
+                                            <div class="item__image">
                                                 <img
-                                                    class="item__image"
                                                     src="img/main/items/our/item-2.webp"
                                                     alt="Image" />
+                                            </div>
+                                            <div class="item__info">
                                                 <div class="item__name">
                                                     Embossed hoop earrings
                                                 </div>
@@ -65,12 +63,15 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="our__column">
-                                            <div class="our__item item">
+                                    </li>
+                                    <li class="our__column">
+                                        <div class="our__item item">
+                                            <div class="item__image">
                                                 <img
-                                                    class="item__image"
                                                     src="img/main/items/our/item-3.webp"
                                                     alt="Image" />
+                                            </div>
+                                            <div class="item__info">
                                                 <div class="item__name">
                                                     Embossed hoop earrings
                                                 </div>
@@ -79,12 +80,15 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="our__column">
-                                            <div class="our__item item">
+                                    </li>
+                                    <li class="our__column">
+                                        <div class="our__item item">
+                                            <div class="item__image">
                                                 <img
-                                                    class="item__image"
                                                     src="img/main/items/our/item-4.webp"
                                                     alt="Image" />
+                                            </div>
+                                            <div class="item__info">
                                                 <div class="item__name">
                                                     Embossed hoop earrings
                                                 </div>
@@ -93,8 +97,8 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
-                                </div>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
