--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -17,9 +17,9 @@
                     <div class="page__wrapper">
                         <div class="page__container">
                             <div class="page__our our">
-                                <div class="our__titles title">
-                                    <h1 class="our__title">Our Products</h1>
-                                    <div class="our__subtitle">
+                                <div class="our__titles titles titles--center">
+                                    <h1 class="our__title title">Our Products</h1>
+                                    <div class="our__subtitle subtitle">
                                         Add our products to weekly lineup
                                     </div>
                                     <ul class="our__list list-our">
@@ -33,7 +33,88 @@
                                     <li class="our__column">
                                         <div class="our__item item">
                                             <div class="item__image">
-                                                <img class="item__img"
+                                                <img
+                                                    src="img/main/items/our/item-1.webp"
+                                                    alt="Image" />
+                                            </div>
+                                            <div class="item__info">
+                                                <div class="item__name">
+                                                    Embossed hoop earrings
+                                                </div>
+                                                <div class="item__price">
+                                                    $144.00
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="our__column">
+                                        <div class="our__item item">
+                                            <div class="item__image">
+                                                <img
+                                                    src="img/main/items/our/item-2.webp"
+                                                    alt="Image" />
+                                            </div>
+                                            <div class="item__info">
+                                                <div class="item__name">
+                                                    Embossed hoop earrings
+                                                </div>
+                                                <div class="item__price">
+                                                    $144.00
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="our__column">
+                                        <div class="our__item item">
+                                            <div class="item__image">
+                                                <img
+                                                    src="img/main/items/our/item-3.webp"
+                                                    alt="Image" />
+                                            </div>
+                                            <div class="item__info">
+                                                <div class="item__name">
+                                                    Embossed hoop earrings
+                                                </div>
+                                                <div class="item__price">
+                                                    $144.00
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="our__column">
+                                        <div class="our__item item">
+                                            <div class="item__image">
+                                                <img
+                                                    src="img/main/items/our/item-4.webp"
+                                                    alt="Image" />
+                                            </div>
+                                            <div class="item__info">
+                                                <div class="item__name">
+                                                    Embossed hoop earrings
+                                                </div>
+                                                <div class="item__price">
+                                                    $144.00
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="page__our our">
+                                <div class="our__titles titles titles--center">
+                                    <h2 class="our__title title">
+                                        Most Popular Product
+                                    </h2>
+                                    <div class="our__subtitle subtitle">
+                                        Best Seller Product This Week!
+                                    </div>
+                                </div>
+                                <ul class="our__items">
+                                    <li class="our__column">
+                                        <div class="our__item item">
+                                            <div class="item__image image">
+                                                <img
                                                     src="img/main/items/our/item-1.webp"
                                                     alt="Image" />
                                             </div>
